<?xml version="1.0"?>
<package format="2">
  <name>macaron</name>
  <version>0.0.0</version>
  <description>DGU macaron package</description>

  <maintainer email="qudgus8486@gmail.com">La Byung Hyun</maintainer>

  <license>TOD0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <exec_depend>message_runtime</exec_depend>  
<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
